--- a/skyscout/package.json
+++ b/skyscout/package.json
@@ -13,6 +13,7 @@
     "lightgallery": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "@react-google-maps/api": "^2.7.0",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
