--- a/skyscout/package.json
+++ b/skyscout/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
+    "@vis.gl/react-google-maps": "^0.5.0",
     "lightgallery": "^2.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-google-maps/api": "^2.7.0",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
