--- a/skyscout/package.json
+++ b/skyscout/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.7.0",
+    "bootstrap": "^5.3.2",
+    "fslightbox-react": "^1.7.6",
     "lightgallery": "^2.7.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "@react-google-maps/api": "^2.7.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
