--- a/skyscout/package.json
+++ b/skyscout/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@react-google-maps/api": "^2.19.2",
     "@vis.gl/react-google-maps": "^0.5.0",
     "bootstrap": "^5.3.2",
